--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
+# Dependencies
 node_modules
+
+# Build outputs
 .docusaurus
 build
-.cache
+
+# Environment & secrets
 .env
+.env.local
+.env*.local
+
+# Logs
+*.log
+npm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
