--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@docusaurus/core": "^3.4.0",
     "@docusaurus/preset-classic": "^3.4.0",
     "@docusaurus/theme-classic": "^3.4.0",
-    "@docusaurus/theme-mermaid": "^3.4.0",
     "clsx": "^2.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "remark-d2": "^0.2.3"
   }
 }
